--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,6 @@ h3,
 }
 
 .header_area .navbar {
-	background: #B42A2A;
 	padding: 5px 0;
 	border: 0px;
 	border-radius: 0px;
@@ -344,7 +343,7 @@ h3,
 	top: -70px;
 	left: 0;
 	right: 0;
-	background: #b42a2a;
+	background:rgba(0, 0, 0, 0.8);
 	z-index: 99;
 	transform: translateY(70px);
 	transition: transform 500ms ease, background 500ms ease;
@@ -456,7 +455,7 @@ h3,
 		margin-bottom: 23px
 	}
 	.header_area .navbar {
-		background: #b42a2a
+		background: rgba(0, 0, 0, 0.8)
 	}
 	.navbar-toggler[aria-expanded="false"] span:nth-child(2) {
 		opacity: 1
